--- a/index.html
+++ b/index.html
@@ -1,173 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BleedHost • Minecraft Server Hosting</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { background: #0b0f14; color: #ffffff; }
-
-    header {
-      padding: 20px 60px;
-      background: #0e141b;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 { color: #00e5a8; font-size: 22px; }
-    nav a {
-      margin-left: 25px;
-      color: #cfd6dd;
-      text-decoration: none;
-      font-size: 14px;
-    }
-    nav a:hover { color: #00e5a8; }
-
-    .hero {
-      padding: 90px 60px;
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 40px;
-    }
-    .hero h2 { font-size: 48px; line-height: 1.1; }
-    .hero h2 span { color: #00e5a8; }
-    .hero p { margin: 20px 0; color: #b9c2cc; }
-    .btn {
-      display: inline-block;
-      padding: 14px 30px;
-      background: #00e5a8;
-      color: #000;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .card {
-      background: #111821;
-      padding: 25px;
-      border-radius: 14px;
-    }
-    .card h3 { margin-bottom: 10px; }
-    .card p { color: #aab3bd; font-size: 14px; }
-
-    .plans { padding: 80px 60px; }
-    .plans h2 { text-align: center; margin-bottom: 40px; }
-    .plan-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-    }
-    .plan {
-      background: #0e141b;
-      padding: 30px;
-      border-radius: 16px;
-      text-align: center;
-    }
-    .plan h3 { color: #00e5a8; }
-    .price { font-size: 28px; margin: 15px 0; }
-    .plan ul { list-style: none; margin: 20px 0; }
-    .plan ul li { margin: 8px 0; color: #cdd5dd; }
-
-    footer {
-      padding: 30px;
-      text-align: center;
-      background: #0e141b;
-      color: #8f9aa5;
-      font-size: 14px;
-    }
-
-    @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; }
-    }
-  </style>
-</head>
-<body>
-
-<header>
-  <h1>BleedHost</h1>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#plans">Plans</a>
-    <a href="#">Discord</a>
-  </nav>
-</header>
-
-<section class="hero">
-  <div>
-    <h2>Host Your <span>Minecraft Server</span></h2>
-    <p>BleedHost provides high-performance Minecraft server hosting with instant setup, powerful hardware, and reliable uptime for smooth, lag-free gameplay.</p>
-    <a class="btn" href="#plans">Get Started</a>
-  </div>
-
-  <div class="features">
-    <div class="card">
-      <h3>Instant Setup</h3>
-      <p>Your server is ready within seconds.</p>
-    </div>
-    <div class="card">
-      <h3>DDoS Protection</h3>
-      <p>Enterprise-grade protection for all servers.</p>
-    </div>
-    <div class="card">
-      <h3>99.9% Uptime</h3>
-      <p>Reliable hosting you can trust.</p>
-    </div>
-    <div class="card">
-      <h3>24/7 Support</h3>
-      <p>Support via Discord anytime.</p>
-    </div>
-  </div>
-</section>
-
-<section class="plans" id="plans">
-  <h2>Minecraft Hosting Plans</h2>
-  <div class="plan-grid">
-    <div class="plan">
-      <h3>Starter</h3>
-      <div class="price">₹99 / mo</div>
-      <ul>
-        <li>2GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>DDoS Protection</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
-    </div>
-
-    <div class="plan">
-      <h3>Pro</h3>
-      <div class="price">₹199 / mo</div>
-      <ul>
-        <li>4GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>Priority Support</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
-    </div>
-
-    <div class="plan">
-      <h3>Ultra</h3>
-      <div class="price">₹399 / mo</div>
-      <ul>
-        <li>8GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>Premium Support</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
-    </div>
-  </div>
-</section>
-
-<footer>
-  © 2025 BleedHost • Minecraft Server Hosting
-</footer>
-
-</body>
+<html lang="en" class="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>BleedHost - Premium Minecraft Server Hosting</title>
+    <meta name="description" content="BleedHost offers premium Minecraft server hosting with instant setup, DDoS protection, 99.9% uptime, and 24/7 expert support. Start your server in under 60 seconds." />
+    <meta property="og:title" content="BleedHost - Premium Minecraft Server Hosting" />
+    <meta property="og:description" content="Lightning-fast Minecraft servers with DDoS protection, mod support, and 24/7 expert help. Get started in seconds." />
+    <meta property="og:type" content="website" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Code:wght@300..700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
