--- a/index.html
+++ b/index.html
@@ -4,170 +4,223 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BleedHost • Minecraft Server Hosting</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta name="description" content="BleedHost provides premium Minecraft server hosting with instant setup, DDoS protection, and 24/7 support." />
+  <link rel="icon" type="image/png" href="logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { background: #0b0f14; color: #ffffff; }
+    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
+    body{background:#0b0d12;color:#fff}
 
-    header {
-      padding: 20px 60px;
-      background: #0e141b;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    /* ===== HEADER ===== */
+    header{
+      position:fixed;
+      top:0;
+      width:100%;
+      z-index:10;
+      background:rgba(10,12,18,.85);
+      backdrop-filter:blur(12px);
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:18px 60px
     }
-    header h1 { color: #00e5a8; font-size: 22px; }
-    nav a {
-      margin-left: 25px;
-      color: #cfd6dd;
-      text-decoration: none;
-      font-size: 14px;
+    .logo{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      font-weight:700;
+      font-size:22px;
+      color:#ff8c1a
     }
-    nav a:hover { color: #00e5a8; }
-
-    .hero {
-      padding: 90px 60px;
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 40px;
+    .logo img{
+      width:42px;
+      height:42px;
+      border-radius:50%;
+      box-shadow:0 0 18px rgba(255,140,26,.4)
     }
-    .hero h2 { font-size: 48px; line-height: 1.1; }
-    .hero h2 span { color: #00e5a8; }
-    .hero p { margin: 20px 0; color: #b9c2cc; }
-    .btn {
-      display: inline-block;
-      padding: 14px 30px;
-      background: #00e5a8;
-      color: #000;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
+    header nav a{
+      margin:0 18px;
+      color:#cfd3da;
+      text-decoration:none;
+      font-size:14px
     }
-
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .card {
-      background: #111821;
-      padding: 25px;
-      border-radius: 14px;
-    }
-    .card h3 { margin-bottom: 10px; }
-    .card p { color: #aab3bd; font-size: 14px; }
-
-    .plans { padding: 80px 60px; }
-    .plans h2 { text-align: center; margin-bottom: 40px; }
-    .plan-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-    }
-    .plan {
-      background: #0e141b;
-      padding: 30px;
-      border-radius: 16px;
-      text-align: center;
-    }
-    .plan h3 { color: #00e5a8; }
-    .price { font-size: 28px; margin: 15px 0; }
-    .plan ul { list-style: none; margin: 20px 0; }
-    .plan ul li { margin: 8px 0; color: #cdd5dd; }
-
-    footer {
-      padding: 30px;
-      text-align: center;
-      background: #0e141b;
-      color: #8f9aa5;
-      font-size: 14px;
+    header nav a:hover{color:#ff8c1a}
+    .cta{
+      background:#ff8c1a;
+      color:#000;
+      padding:10px 22px;
+      border-radius:8px;
+      font-weight:600;
+      text-decoration:none
     }
 
-    @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; }
+    /* ===== HERO ===== */
+    .hero{
+      min-height:100vh;
+      background:
+        linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+        url('https://images.unsplash.com/photo-1611605698335-9f9cfdc33c38?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      display:grid;
+      grid-template-columns:1.2fr 1fr;
+      align-items:center;
+      padding:140px 60px 80px;
+      gap:40px;
+      position:relative
+    }
+    .badge{
+      display:inline-block;
+      background:rgba(255,140,26,.15);
+      color:#ff8c1a;
+      padding:6px 14px;
+      border-radius:999px;
+      font-size:12px;
+      margin-bottom:14px
+    }
+    .hero h1{
+      font-size:54px;
+      line-height:1.1
+    }
+    .hero h1 span{color:#ff8c1a}
+    .hero p{
+      margin:22px 0;
+      color:#d0d4db;
+      max-width:520px
+    }
+    .hero-buttons a{margin-right:14px}
+    .secondary{background:rgba(255,255,255,.08);color:#fff}
+
+    /* ===== FEATURES ===== */
+    .features{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:22px
+    }
+    .feature{
+      background:rgba(20,22,30,.85);
+      border-radius:16px;
+      padding:26px;
+      box-shadow:0 20px 40px rgba(0,0,0,.4)
+    }
+    .feature h3{
+      margin-bottom:8px;
+      color:#ff8c1a
+    }
+    .feature p{
+      font-size:14px;
+      color:#b9c0cc
+    }
+
+    /* ===== STATS ===== */
+    .stats{
+      display:flex;
+      justify-content:center;
+      gap:40px;
+      padding:40px;
+      background:#0e1118
+    }
+    .stat{
+      font-size:14px;
+      color:#b9c0cc
+    }
+    .stat span{
+      color:#ff8c1a;
+      font-weight:700;
+      margin-right:6px
+    }
+
+    /* ===== LOCATIONS ===== */
+    .locations{
+      display:flex;
+      justify-content:center;
+      gap:30px;
+      padding:40px 20px;
+      background:#12151f;
+    }
+    .location{
+      background:rgba(20,22,30,.85);
+      padding:16px 24px;
+      border-radius:12px;
+      box-shadow:0 10px 20px rgba(0,0,0,.3);
+      font-weight:600;
+      color:#fff;
+      text-align:center;
+      min-width:120px;
+    }
+
+    /* ===== RESPONSIVE ===== */
+    @media(max-width:900px){
+      header{padding:16px 30px}
+      .hero{grid-template-columns:1fr;padding:120px 30px 60px}
+      .hero h1{font-size:40px}
+      .features{grid-template-columns:1fr}
+      .locations{flex-direction:column;gap:16px}
     }
   </style>
 </head>
+
 <body>
 
 <header>
-  <h1>BleedHost</h1>
+  <div class="logo">
+    <img src="logo.png" alt="BleedHost Logo">
+    BleedHost
+  </div>
+
   <nav>
-    <a href="#">Home</a>
-    <a href="#plans">Plans</a>
-    <a href="#">Discord</a>
+    <a href="#">Pricing</a>
+    <a href="#">Features</a>
+    <a href="#">Locations</a>
+    <a href="#">FAQ</a>
+    <a href="#">Contact</a>
   </nav>
+
+  <a class="cta" href="#">Get Started →</a>
 </header>
 
 <section class="hero">
   <div>
-    <h2>Host Your <span>Minecraft Server</span></h2>
-    <p>BleedHost provides high-performance Minecraft server hosting with instant setup, powerful hardware, and reliable uptime for smooth, lag-free gameplay.</p>
-    <a class="btn" href="#plans">Get Started</a>
+    <div class="badge">Limited Offer: 20% OFF First Month</div>
+    <h1>Host Your Own <span>Minecraft Server</span></h1>
+    <p>Experience lightning-fast performance, unbeatable reliability, and 24/7 support for your Minecraft adventures.</p>
+    <div class="hero-buttons">
+      <a class="cta" href="#">Get Started →</a>
+      <a class="cta secondary" href="#">Learn More</a>
+    </div>
   </div>
 
   <div class="features">
-    <div class="card">
-      <h3>Instant Setup</h3>
-      <p>Your server is ready within seconds.</p>
+    <div class="feature">
+      <h3>⚡ Instant Setup</h3>
+      <p>Your Minecraft server goes live in under 60 seconds.</p>
     </div>
-    <div class="card">
-      <h3>DDoS Protection</h3>
-      <p>Enterprise-grade protection for all servers.</p>
+    <div class="feature">
+      <h3>🛡 DDoS Protection</h3>
+      <p>Enterprise-grade security keeps your server online.</p>
     </div>
-    <div class="card">
-      <h3>99.9% Uptime</h3>
-      <p>Reliable hosting you can trust.</p>
+    <div class="feature">
+      <h3>⏱ 99.9% Uptime</h3>
+      <p>Guaranteed reliability and stable performance.</p>
     </div>
-    <div class="card">
-      <h3>24/7 Support</h3>
-      <p>Support via Discord anytime.</p>
-    </div>
-  </div>
-</section>
-
-<section class="plans" id="plans">
-  <h2>Minecraft Hosting Plans</h2>
-  <div class="plan-grid">
-    <div class="plan">
-      <h3>Starter</h3>
-      <div class="price">₹99 / mo</div>
-      <ul>
-        <li>2GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>DDoS Protection</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
-    </div>
-
-    <div class="plan">
-      <h3>Pro</h3>
-      <div class="price">₹199 / mo</div>
-      <ul>
-        <li>4GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>Priority Support</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
-    </div>
-
-    <div class="plan">
-      <h3>Ultra</h3>
-      <div class="price">₹399 / mo</div>
-      <ul>
-        <li>8GB RAM</li>
-        <li>NVMe SSD</li>
-        <li>Premium Support</li>
-      </ul>
-      <a class="btn" href="#">Buy Now</a>
+    <div class="feature">
+      <h3>🎧 24/7 Support</h3>
+      <p>Friendly expert support whenever you need help.</p>
     </div>
   </div>
 </section>
 
-<footer>
-  © 2025 BleedHost • Minecraft Server Hosting
-</footer>
+<section class="locations">
+  <div class="location">🇮🇳 India</div>
+  <div class="location">🇩🇪 Germany</div>
+  <div class="location">🇸🇬 Singapore</div>
+</section>
+
+<section class="stats">
+  <div class="stat"><span>✔</span>DDoS Protected</div>
+  <div class="stat"><span>✔</span>99.9% Uptime</div>
+  <div class="stat"><span>✔</span>24/7 Support</div>
+  <div class="stat"><span>✔</span>Instant Setup</div>
+</section>
 
 </body>
 </html>
